# COCOHRIW_operator_identification

./: README.md
facial_recognition/: CMakeLists.txt  package.xml
facial_recognition/scripts/: recognition_publisher.py
facial_recognition/src/: prediction.cpp
facial_recognition_windows/: __init__.py  faceRecognitionApp.py  xiapi.py  xidefs.py
trenovanie_neuronovej_siete/: trenovanie_SNN.ipynb
